jenkins-k8s-manifests/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    app: jenkins-casc
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "jenkins-backendconfig"}'
spec:
  type: ClusterIP   # Required for GCE ingress
  selector:
    app: jenkins-casc
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
