jenkins-k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    #  kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    # nginx.ingress.kubernetes.io/x-forwarded-proto: "https"
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header X-Forwarded-Proto $scheme;
    #   proxy_set_header X-Forwarded-Port $server_port;
    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    #   proxy_set_header X-Forwarded-Host $host;

    #  kubernetes.io/ingress.global-static-ip-name: "jenkins-ip"
spec:
  # ingressClassName: "gce"
  ingressClassName: "nginx"
  # tls:
  # - hosts:
  #     - jenkins-eks.ks.ukinfosec.info    # <-- your domain
  #   secretName: jenkins-tls
  rules:
  - host: jenkins-eks.ks.ukinfosec.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
